pc直播间--分享图标修改

--- a/online-web/src/main/webapp/web/html/liveVideoOther.html
+++ b/online-web/src/main/webapp/web/html/liveVideoOther.html
@@ -82,6 +82,31 @@
 				text-align: center;
 				color: #fff;
 			}
+			.bdsharebuttonbox {
+				float: left;
+			}
+			.bdsharebuttonbox a{
+				width: 30px;
+				height: 30px !important;
+				margin: 6px 4px !important;
+			}
+			.bdsharebuttonbox .bds_tsina{
+				background: url(/web/images/video2/weibo.png) no-repeat !important;
+				background-size: 100% 100%;
+			}
+			.bdsharebuttonbox .bds_sqq{
+				background: url(/web/images/video2/Qq.png) no-repeat !important;;
+				background-size: 100% 100%;
+			}
+			/*.bdsharebuttonbox .bds_qzone{
+				background: url(/web/images/video2/icon_qqkongjian_yellow.png) no-repeat !important;
+				background-size: 100% 100%;
+			}*/
+			.bdsharebuttonbox .bds_qzone img{
+				/*width: 26px;
+			    height: 26px;
+			    margin-left: -18px;*/
+			}
 		</style>
 	</head>
 	<body>
@@ -122,8 +147,13 @@
 						<li style="line-height:none;background:none;width:75px;">分享到：</li>
 						<li class="share_li1"><img src="/web/images/video2/weixin.png" alt="" /><div style="padding:5px;background-color: #fff;" class="share_li1_img"><div id="qrcodeCanvas1"></div></div></li>
 						<li class="share_li2"><img src="/web/images/video2/quan.png" alt="" /><div style="padding:5px;background-color: #fff;" class="share_li2_img"><div id="qrcodeCanvas2"></div></div></li>
-						<li style="background:none;"><a href="javascript:void(0)" id="weibo_share" target="_blank" ><img src="/web/images/video2/weibo.png" alt="" /></a></script></li>
-						<li style="background:none;"><a href="javascript:void(0)" id="qq_share" target="_blank" ><img src="/web/images/video2/Qq.png" alt="" /></a></li>
+						<!--<li style="background:none;"><a href="javascript:void(0)" id="weibo_share" target="_blank" ><img src="/web/images/video2/weibo.png" alt="" /></a></script></li>
+						<li style="background:none;"><a href="javascript:void(0)" id="qq_share" target="_blank" ><img src="/web/images/video2/Qq.png" alt="" /></a></li>-->
+						<div class="bdsharebuttonbox" data-tag="share_1">
+							<a class="bds_tsina" data-cmd="tsina"></a>
+							<a class="bds_sqq" data-cmd="sqq"></a>
+							<!--<a class="bds_qzone" data-cmd="qzone" href="#"></a>-->
+						</div>
 					</ul>
 				</div>
 				<div class="bdsharebuttonbox" data-tag="share_1">
