中医师测试评论区

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -799,8 +799,19 @@ $(function(){
             <p style="font-size: 0.24rem; color: #BBBBBB;padding: 0.2rem 0;text-align: center;">没人送礼物？快去打赏主播吧~</p>
         </div>
     </div>
-    
     <!-- 排行榜结束 -->
+
+	<!-- 无文档开始 -->
+    <div class="untitled_document" style="margin-top: 3.6rem;">
+        <div class="no_git">
+            <div class="no_git_pic">
+                
+            </div>
+            <p style="font-size: 0.24rem; color: #BBBBBB;padding: 0.2rem 0;text-align: center;">主播还没上传课件~</p>
+        </div>
+    </div>
+    <!-- 无文档结束 -->
+
     <!-- 文档开始 -->
     <div class="document" style="margin-top: 3.74rem;">
         <div class="document_ceneter" id="my-doc-area">
@@ -970,12 +981,12 @@ $(function(){
             $("#doc").removeClass("img_doc");
         });
 
-        var Document = $(".document_ceneter").html();
+        /*var Document = $(".document_ceneter").html();
         if (Document == !null) {
         	alert(1111);
         }else{
         	alert(2222);
-        };
+        };*/
     };
 </script>
 <script>
