完善pc直播间bug

--- a/online-web/src/main/webapp/web/html/liveVideoOther.html
+++ b/online-web/src/main/webapp/web/html/liveVideoOther.html
@@ -156,11 +156,11 @@
 						</div>
 					</ul>
 				</div>
-				<div class="bdsharebuttonbox" data-tag="share_1">
+				<!-- <div class="bdsharebuttonbox" data-tag="share_1">
 					<a class="bds_tsina" data-cmd="tsina"></a>
 					<a class="bds_sqq" data-cmd="sqq"></a>
 					<a class="bds_qzone" data-cmd="qzone" href="#"></a>
-				</div>
+				</div> -->
 				<span class="liveTime">直播时间：<span></span></span>
 				<!-- <span class="liveMember"></span> -->
 				
