--- a/wechat/src/main/webapp/demo/gkzb_doc.html
+++ b/wechat/src/main/webapp/demo/gkzb_doc.html
@@ -54,7 +54,7 @@
           ls.set('ipt-channelId');
           
           window.doc = new VhallDocPassive({
-            channelId:'ch_7414f7c2', //频道Id
+            channelId:'ch_d68e0137', //频道Id
             docNode:'my-doc-area',//文档显示节点div id
           });
 
@@ -62,7 +62,7 @@
            * 初始化聊天对象ch_d260ab70
            */
           window.chat = new VhallChat({
-             channelId:'ch_7414f7c2'//频道Id，必填
+             channelId:'ch_d68e0137'//频道Id，必填
           });
           
           /**
@@ -188,7 +188,7 @@
         <div class="navbar-form">
             <div class="row">
                 <label>token:</label>
-                <input value="access:27376e92:ff6711edcdb89209" id="ipt-token" type="text" class="form-control" placeholder="token">
+                <input value="access:27376e92:c40715f7bb4f7b6f" id="ipt-token" type="text" class="form-control" placeholder="token">
             </div>
             <div class="row">
                 <label>appId:</label>
@@ -197,11 +197,11 @@
             <div class="row">
                 <label>roomId:</label>
                 <!-- <input value="lss_22b89748" id="ipt-roomId" type="text" class="form-control" placeholder="roomId"> -->
-                <input value="lss_4756cf02" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
+                <input value="lss_67bfaf6f" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
             </div>
             <div class="row">
                 <label>channelId:</label>
-                <input value="ch_7414f7c2" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
+                <input value="ch_d68e0137" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
             </div>
             <div class="row">
                 <label>文档区域宽:</label>
