--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -814,7 +814,7 @@ $(function(){
 
     <!-- 文档开始 -->
     <div class="document" style="margin-top: 3.74rem;">
-        <div class="document_ceneter" id="my-doc-area">
+        <div class="document_ceneter" id="my-doc-area" >
             
         </div>
         <div class="both"></div>
@@ -886,10 +886,10 @@ $(function(){
 <script type="text/javascript" src="/xcview/js/im/vhallGiftSend.js"></script>
 
 
-<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js?v=201806271657"></script>
+<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
+<script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
-<script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
 <!-- 部分点击事件 -->
