pc直播间，充值修改

--- a/online-web/src/main/webapp/web/html/liveVideo2.html
+++ b/online-web/src/main/webapp/web/html/liveVideo2.html
@@ -803,7 +803,7 @@
 		<div id='main1'>
 
 			<div class='topbanner'>
-				<span>帐号充值</span><i class="close" style="opacity: 1">X</i>
+				<span>熊猫币充值</span><i class="close" style="opacity: 1">X</i>
 			</div>
 			<div id='pay'>
 				<!-- 充值成功页面 -->
