pc添加充值。h5修改直播间bug。购买成功ui

--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -836,7 +836,7 @@
 		<div id='main1'>
 
 			<div class='topbanner'>
-				<span>熊猫币充值</span><i class="close" style="opacity: 1">X</i>
+				<span>熊猫币充值</span><i class="close" style="opacity: 1">×</i>
 			</div>
 			<div id='pay'>
 				<!-- 充值成功页面 -->
@@ -859,24 +859,27 @@
 				</div>
 				<div class='czym'>
 					<!-- 第一个 -->
-					<div class='item_title title_one'>
+					<!--<div class='item_title title_one'>
 						<p>剩余熊猫币</p>
 						<div class='item_content content_one'>
 							<i class="balanceTotal" id="balanceTotal"></i>
 						</div>
-					</div>
+					</div>-->
 					<!-- 第二个 -->
 					<div class='item_title title_two'>
 						<p>充值帐号</p>
-						<div class='item_content content_two'>
+						<div class=' content_two'>
 							<!-- <em>自己</em> -->
 							<span id="account"></span>
 						</div>
+						<div class=' content_one'>
+							（余额<i class="balanceTotal" id="balanceTotal"></i>熊猫币）
+						</div>
 					</div>
 					<!-- 第三个 -->
-					<div class='item_title title_two'>
+					<div class='item_title title_two' style="width: 640px;">
 						<p>充值数量</p>
-						<div class='item_content content_two'>
+						<div class='item_content content_two' style="width: 540px;">
 							<ul>
 							<!-- 	<li data-value='0.1' class="dian">0.1个 <i
 									class="ico i-selector"></i>
