--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -247,7 +247,14 @@
 				</table>
 			</div>
 		</div>
-
+		<!--动态图片点击放大预览-->
+		<div class="mask-photo hide" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background: rgb(0, 0, 0); opacity: 0.3; z-index: 888;overflow-y: auto;"></div>
+		<div class="wrap-photo-see hide">
+			<img src="" alt="原图" />
+		</div>
+		
+		
+		
 		<!--删除提示弹窗-->
 		<!--<div id="deleteTip" class="hide">
 			<h4 class="confirm-title">删除资源</h4>
@@ -485,7 +492,7 @@
 								{{if item.type==2}}
 									<div class="save-photo-wrap">
 										<ul>
-											{{each item.imgStr as picture}}
+											{{each item.imgStr as picture t}}
 											<li>
 												<img src="{{picture.imgUrl}}" alt="日常生活照" />
 											</li>
