--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -739,52 +739,52 @@
 						<div class="payment-table">
 							<div class="payment-table-left">
 								<div class="alipay">
-									<img src="/web/images/130/zhifubao.png" alt="" />
+									<img src="/web/images/chongZhi/894495793496107596.png" alt="" /><span>支付宝</span>
 								</div>
 								<div class="weixin">
-									<img src="/web/images/130/weixin.png" alt="" />
+									<img src="/web/images/chongZhi/377635816413212032.png" alt="" /><span>微信</span>
 								</div>
 							</div>
 							<div class="payment-table-right">
 								<div class="alipay-er">
 									<img src="/web/images/sideWeibopng.jpg" />
 									<div class="alipay-er-fize">
-										<img src="/web/images/Android.png" alt="" />
+										<img src="/web/images/chongZhi/43798792669526519.png" alt="" />
 										<div class="alipay-er-fize-div">
-											<div class="">微信扫描二维码</div>
-											<div class="">以完成支付</div>
+											<div class="">打开手机支付宝</div>
+											<div class="">扫一扫继续付款</div>
 										</div>
 									</div>
 								</div>
 								<div class="weixin-er" style="display: none;">
 									<img src="/web/images/sideWeibopng.jpg" />
-									<!--<div class="alipay-er-fize">
-										<img src="/web/images/Android.png" alt="" />
-										<div class="alipay-er-fize-div">
+									<div class="weixin-er-fize">
+										<img src="/web/images/chongZhi/43798792669526519.png" alt="" />
+										<div class="weixin-er-fize-div">
 											<div class="">微信扫描二维码</div>
 											<div class="">以完成支付</div>
 										</div>
-									</div>-->
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					
 					<div class="pay-protocol">
-						<span class="pay-protocol-box">
+						<!--<span class="pay-protocol-box">
 			                <em class="select"></em>
-			                <span class="pay-protocol-hint">我已经阅读并同意</span>
-						</span>
+			                <span class="pay-protocol-hint">阅读并同意</span>
+						</span>-->
 						<div class="pay-protocolBox">
-							<span class="kuhao">《</span>
-							<a href="/web/html/payment_agree.html" target="_blank">熊猫中医用户付费协议</a><span class="kuhao">》</span>
+							<span class="kuhao">阅读并同意</span>
+							<a href="/web/html/payment_agree.html" target="_blank">《熊猫中医用户付费协议》</a><span class="kuhao"></span>
 						</div>
 					</div>
 					
 					<!-- 支付 -->
-					<div class='item_title' style="text-align: center;">
+					<!--<div class='item_title' style="text-align: center;">
 						<a href="javascript:;" class='goPay'>前往支付</a>
-					</div>
+					</div>-->
 					<!-- 二维码 -->
 					<div class='erweima'
 						style="width: 125px; height: 125px; position: absolute; border: 1px solid #e1e1e1; left: 37%; bottom: 10%; display: none; z-index: 999">
@@ -1016,12 +1016,21 @@ function insertAtCaret(e){
 		$(".alipay").click(function(){
 			$(".weixin-er").hide();
 			$(".alipay-er").show();
+			$(".alipay").css("background","#fff");
+			$(".weixin").css("background","none");
 		});
 		$(".weixin").click(function(){
 			$(".weixin-er").show();
 			$(".alipay-er").hide();
+			$(".alipay").css("background","none");
+			$(".weixin").css("background","#fff");
 		});
 		$(".alipay").click();
+		
+//		判断排行榜为空
+		if($('.billboard-float').is('.hide')){
+			alert(111);
+		}
 	 	
 	});
 </script>
