晚上消息列表

--- a/wechat/src/main/webapp/demo/gkzb_doc.html
+++ b/wechat/src/main/webapp/demo/gkzb_doc.html
@@ -96,7 +96,7 @@
         
         window.Vhall.config({
              appId :$('#ipt-appId').val(),//应用 ID ,必填
-             accountId :'test_jssdk',//第三方用户唯一标识,必填
+             accountId :"9754170cc93c4169996f3ddc86ea30f9",//第三方用户唯一标识,必填
              token: $('#ipt-token').val(),//token必填
         });
          setTimeout(function(){
@@ -121,8 +121,8 @@
 
           var isProd = window.location.href.indexOf('vhallyun.com') > -1;
           if(!isProd){
-              $('#ipt-appId').val('27376e92');
-              $('#ipt-channelId').val('ch_7414f7c2');
+              $('#ipt-appId').val('fbc17706');
+              $('#ipt-channelId').val('ch_958ba600');
           }
 
           $('#btn-set-init').on('click',function(){
@@ -188,20 +188,20 @@
         <div class="navbar-form">
             <div class="row">
                 <label>token:</label>
-                <input value="access:27376e92:c40715f7bb4f7b6f" id="ipt-token" type="text" class="form-control" placeholder="token">
+                <input value="access:fbc17706:b2c8fe1caf721510" id="ipt-token" type="text" class="form-control" placeholder="token">
             </div>
             <div class="row">
                 <label>appId:</label>
-                <input value="27376e92" id="ipt-appId" type="text" class="form-control" placeholder="appId">
+                <input value="fbc17706" id="ipt-appId" type="text" class="form-control" placeholder="appId">
             </div>
             <div class="row">
                 <label>roomId:</label>
                 <!-- <input value="lss_22b89748" id="ipt-roomId" type="text" class="form-control" placeholder="roomId"> -->
-                <input value="lss_67bfaf6f" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
+                <input value="lss_6ab8d432" id="ipt-roomId" type="text" class="form-control" placeholder="roomId">
             </div>
             <div class="row">
                 <label>channelId:</label>
-                <input value="ch_d68e0137" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
+                <input value="ch_958ba600" id="ipt-channelId" type="text" class="form-control" placeholder="channelId">
             </div>
             <div class="row">
                 <label>文档区域宽:</label>
