--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -440,7 +440,7 @@
 				<div class="see-the-replay" style="display:none;">回放生成成功,点击查看</div>
 				<div class="learning-center" style="display:none;">直播结束，点击返回学习中心</div>
 				<div class="see-the-replay" style="display:none;">直播结束,点击查看回放</div>
-				<div class="media-error" style="display:none;">获取媒体数据过程中出错</div>
+				<div class="media-error" style="display:none;">获取媒体数据错误，请检查网络</div>
 			</div>
 			<!--回放重播提示结束-->
 				
