--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -436,7 +436,7 @@
 
         <!--添加视频读取失败后的提示-->
         <div class="video_end_top4" style="display: none;">
-            <p>获取媒体数据过程中出错 </p>
+            <p>获取媒体数据错误，请检查网络 </p>
             <div class="initiation" onclick="location.reload()">点击刷新</div>
         </div> 
         <!--添加视频读取失败后的提示-->
