直播设备弹窗

--- a/online-web/src/main/webapp/web/html/live-room/live-room.html
+++ b/online-web/src/main/webapp/web/html/live-room/live-room.html
@@ -9,6 +9,12 @@
 	<body>
 		
 		<div class="background-ask hide"></div>
+		<!--设备提示-->
+		<div class="noll-equipment hide">
+			<p class="equipment-title">设备提示</p>
+			<p class="equipment-content">未检测到直播设备，请连接摄像头或麦克风后开播</p>
+			<p class="equipment-close">我知道了</p>
+		</div>
 		<!--文档弹窗-->
 		<div class="modal-content modal-document hide">
 			<div class="modal-top">
