--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -831,7 +831,42 @@
 		
 <script type="text/javascript" src="/web/js/live-streamin-document/jquery.js" ></script>
 <script src=//cnstatic01.e.vhall.com/3rdlibs/mCustomScrollbar/3.0.8/jquery.mCustomScrollbar.concat.min.js></script>
+<script>
+/**
+ * 如果在手机上打开此连接，跳转到对应微信端的页面
+ */
+//浏览器判断
+var browser={
+    versions:function(){
+        var u = navigator.userAgent, app = navigator.appVersion;
+        return {//移动终端浏览器版本信息
+            trident: u.indexOf('Trident') > -1, //IE内核
+            presto: u.indexOf('Presto') > -1, //opera内核
+            webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
+            gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
+            mobile: !!u.match(/AppleWebKit.*Mobile.*/), //是否为移动终端
+            ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
+            android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
+            iPhone: u.indexOf('iPhone') > -1 , //是否为iPhone或者QQHD浏览器
+            iPad: u.indexOf('iPad') > -1, //是否iPad
+            webApp: u.indexOf('Safari') == -1, //是否web应该程序，没有头部与底部
+            weixin: u.indexOf('MicroMessenger') > -1, //是否微信
+            qq: u.match(/\sQQ/i) == " qq" //是否QQ
+        };
+    }(),
+    language:(navigator.browserLanguage || navigator.language).toLowerCase()
+}
+/**
+ * 判断打开此连接的浏览器类型
+ */
+if(browser.versions.mobile || browser.versions.ios || browser.versions.android ||
+    browser.versions.iPhone || browser.versions.iPad){
+    	
+        wxurl = protocoltype+"//"+config.wechat+"/wx_share.html?shareType=1&shareId="+course_id;
+    window.location = wxurl;
+}
 
+</script>
 <!-- <script src="/web/js/artTemplate.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" src="/web/js/bootstrap.js"></script>
 <script src="/web/js/ajaxfileupload.js"></script>
