--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -720,9 +720,9 @@
 						<p>充值数量</p>
 						<div class='item_content content_two' style="width: 540px;">
 							<ul>
-							<!-- 	<li data-value='0.1' class="dian">0.1个 <i
+								<li data-value='1' class="dian">1个 <i
 									class="ico i-selector"></i>
-								</li> -->
+								</li>
 								<li data-value='5' class='orange dian'>50个 <!--<i
 									class="ico i-selector show"></i>-->
 								</li>
@@ -763,7 +763,8 @@
 							</div>
 							<div class="payment-table-right">
 								<div class="alipay-er">
-									<img src="/web/images/sideWeibopng.jpg" />
+									<img id="ali_qrcode" src="/web/images/sideWeibopng.jpg" />
+									<img id="wx_qrcode" style="display:none;" src="/web/images/sideWeibopng.jpg" />
 									<div class="alipay-er-fize">
 										<img src="/web/images/chongZhi/43798792669526519.png" alt="" />
 										<div class="alipay-er-fize-div">
