--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -967,6 +967,13 @@ if(browser.versions.mobile || browser.versions.ios || browser.versions.android |
 				$("iframe").addClass("iframe-addclass");
 				$("iframe").addClass("iframe-addclass");
 				$(".company-introduce-one").addClass("doc-imgs");  //点击小区域显示 大文档
+				
+				$(".doc-img").css("width","800px");
+				$(".doc-img").css("height","450px");
+
+				$("iframe").css("width","800px");
+				$("iframe").css("height","450px");
+				alert(1111);
 	
  			}else{
  				
