--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -1125,8 +1125,14 @@ function insertAtCaret(e){
 	 	});
 	 	/*鼠标放排行榜上查看效果结束*/
 	 	
-//		判断排行榜为空
-		if($('.billboard-float').is('.hide')){
+
+		function isWeixin(){
+		    var ua = navigator.userAgent.toLowerCase();
+		    if(ua.match(/MicroMessenger/i)=='micromessenger'){
+//		        return true;
+			$(".bdsharebuttonbox a").css("margin-top","0");
+			alert(1111);
+		    }
 		}
 	 	
 	});
