pc--隐藏微信浏览器

--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -1136,14 +1136,13 @@ function insertAtCaret(e){
 	 	/*鼠标放排行榜上查看效果结束*/
 	 	
 
-		function isWeixin(){
+		/*function isWeixin(){
 		    var ua = navigator.userAgent.toLowerCase();
 		    if(ua.match(/MicroMessenger/i)=='micromessenger'){
-//		        return true;
 			$(".bdsharebuttonbox a").css("margin-top","0");
 			alert(1111);
 		    }
-		}
+		}*/
 	 	
 	});
 </script>
