直播间--pc文档修改。

--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -289,6 +289,10 @@
 	.vjs-tech{
 		/*z-index: 99999999999999;*/
 	}
+	.doc-img-div img{
+		max-width: 800px !important;
+		max-height: 450px !important;
+	}
 
 	
 </style>
@@ -983,7 +987,6 @@ if(browser.versions.mobile || browser.versions.ios || browser.versions.android |
 
 				$("iframe").css("width","800px");
 				$("iframe").css("height","450px");
-				alert(1111);
 	
  			}else{
  				
