--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -159,7 +159,7 @@
 			<script type="text/html" id="exothecium_id">
 
 			{{each items as item i}}
-			<div class="batch_main" data-ids="{{item.id}}">
+			<div class="batch_main" data-ids="{{item.id}}" data-doctorType="{{item.doctorType}}" data-userId="{{item.userId}}">
 				<div class="batch_main_bg">
 					<div class="batch_main_img">
 						<img src="{{item.headPortrait}}" alt="" onerror="nofind();" />
@@ -205,7 +205,7 @@
 				<div class="physicians">
 					<div class="physician_title" code="{{item.code}}">{{item.text}}<img src="/xcview/images/video_review.png" alt=""></div>
 					{{each item.doctors as item i}}   
-					<div class="physician_cen" data-id="{{item.id}}">
+					<div class="physician_cen" data-id="{{item.id}}" data-doctorType="{{item.doctorType}}" data-userId="{{item.userId}}">
 						<div class="head_portrait">
 							<img src="{{item.headPortrait}}" alt="" onerror="nofind();"  />
 						</div>
