pc添加排行榜默认文字。。h5直播间--无文档添加背景图，删除h5多余图片

--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -100,6 +100,11 @@ $(function(){
  	transform: scale(1, 1) !important;
  	transform: translate(-7.10543e-15px, 3.90799e-14px) !important;
  }
+ .document_ceneter{
+ 	background: url(/xcview/images/190673525877354982.png) no-repeat;
+ 	background-size: 2.37rem 2.67rem;
+ 	background-position: center center;
+ }
 </style>
 
 <script>
@@ -826,9 +831,7 @@ $(function(){
 
     <!-- 文档开始 -->
     <div class="document" style="margin-top: 3.74rem;">
-        <div class="document_ceneter" id="my-doc-area">
-            <div class="both"></div>
-        </div>
+        <div class="document_ceneter" id="my-doc-area"></div>
         <div class="both"></div>
     </div>
     
