注释医师认证模块

--- a/online-web/src/main/webapp/web/html/ResidentDoctor.html
+++ b/online-web/src/main/webapp/web/html/ResidentDoctor.html
@@ -360,7 +360,7 @@
 
 <div class="mask"></div>
 <div id="headImg" class="clearfix">
-    <div class="container clearfix">
+    <div class="container1 clearfix">
         <div class="img-title"><p>头像设置</p><i class="iconfont icon-guanbi imgClose"></i></div>
         <div class="img-box1">
             <a href="javascript:void(0)" class="upload-img">
@@ -545,54 +545,54 @@
 	
 	
 	
-//	
-//	initEditor();
-//	 //实例化编辑器
-//  //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-//	 function initEditor() {
-//       UE.getEditor('editor',{
-//           toolbars:[[
-////      'source', //源代码
-//               'undo', //撤销
-//               'redo', //重做
-//               'bold', //加粗
-//               'forecolor', //字体颜色
-//               'backcolor', //背景色
-//               'indent', //首行缩进
-//               'removeformat',//清除格式
-//               'formatmatch', //格式刷
-//               'blockquote', //引用
-//               'fontfamily', //字体
-//               'fontsize', //字号
-//               'paragraph', //段落格式
-//               'italic', //斜体
-//               'underline', //下划线
-//               'strikethrough', //删除线
-//               'superscript', //上标
-//               'subscript', //下标
-//               'touppercase', //字母大写
-//               'tolowercase', //字母小写
-//               'justifyleft', //居左对齐
-//               'justifyright', //居右对齐
-//               'justifycenter', //居中对齐
-//               'justifyjustify',//两端对齐
-//               'link', //超链接
-//               'unlink', //取消链接
-//               'simpleupload', //单图上传
-//               // 'insertimage', //多图上传
-////          'emotion', //表情
-//               'fullscreen'
-//           ] ],
-//           initialFrameWidth: 540,
-//      	 initialFrameHeight: 220,
-//           elementPathEnabled:false,
-//           autoHeightEnabled: false,
-//           autoFloatEnabled: true,
-//           enableAutoSave:false,
-//           imagePopup:false,
-//           maximumWords:10000       //允许的最大字符数
-//       });
-//   }
+	
+	initEditor();
+	 //实例化编辑器
+    //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+	 function initEditor() {
+         UE.getEditor('editor',{
+             toolbars:[[
+//      'source', //源代码
+                 'undo', //撤销
+                 'redo', //重做
+                 'bold', //加粗
+                 'forecolor', //字体颜色
+                 'backcolor', //背景色
+                 'indent', //首行缩进
+                 'removeformat',//清除格式
+                 'formatmatch', //格式刷
+                 'blockquote', //引用
+                 'fontfamily', //字体
+                 'fontsize', //字号
+                 'paragraph', //段落格式
+                 'italic', //斜体
+                 'underline', //下划线
+                 'strikethrough', //删除线
+                 'superscript', //上标
+                 'subscript', //下标
+                 'touppercase', //字母大写
+                 'tolowercase', //字母小写
+                 'justifyleft', //居左对齐
+                 'justifyright', //居右对齐
+                 'justifycenter', //居中对齐
+                 'justifyjustify',//两端对齐
+                 'link', //超链接
+                 'unlink', //取消链接
+                 'simpleupload', //单图上传
+                 // 'insertimage', //多图上传
+//          'emotion', //表情
+                 'fullscreen'
+             ] ],
+             initialFrameWidth: 540,
+        	 initialFrameHeight: 220,
+             elementPathEnabled:false,
+             autoHeightEnabled: false,
+             autoFloatEnabled: true,
+             enableAutoSave:false,
+             imagePopup:false,
+             maximumWords:10000       //允许的最大字符数
+         });
+     }
 
     function getContent() {
         var arr = [];
