--- a/online-web/src/main/webapp/web/html/ResidentDoctor.html
+++ b/online-web/src/main/webapp/web/html/ResidentDoctor.html
@@ -546,10 +546,10 @@
 	
 	
 	
-	initEditor();
+//	initEditor();
 	 //实例化编辑器
     //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-	 function initEditor() {
+	 function initEditor(fn) {
          UE.getEditor('editor',{
              toolbars:[[
 //      'source', //源代码
@@ -592,6 +592,11 @@
              imagePopup:false,
              maximumWords:10000       //允许的最大字符数
          });
+         if(fn!=null){
+              UE.getEditor('editor').addListener('ready', function (editor) {
+                  fn();
+              });
+		 }
      }
 
     function getContent() {
