直播回放--修改。测试安卓手机，倒计时

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -49,7 +49,7 @@
 		    text-align: center;
 		    background: #000;
 		    margin: 0 auto;
-		    display: none;
+		    /*display: none;*/
 		    position: absolute;
 		    top: 0;
 		    left: 50%;
@@ -101,7 +101,7 @@
 
 		<script type="text/html" id="data_video">
 			<!--<img src="{{smallImgPath}}"/>-->
-			{{if lineState == 1}}
+			{{if lineState == 1 && record==ture}}
 			<!--视频开播-->
 			<a class="memory_lujin" data-memory="{{id}}"  href="javascript:;"></a>
 			<div class="video_prompt_open">
