--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -922,6 +922,8 @@ if(browser.versions.mobile || browser.versions.ios || browser.versions.android |
 <script src="https://static.vhallyun.com/jssdk/dvideo-plugin.js?v=0.3"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-player-1.0.0.js"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
+<script src="https://t-static01-open.e.vhall.com/jssdk/vhall-jssdk-doc-1.0.0.js?v=201806271657"></script>
+
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-chat-1.0.0.js?v=201801121522"></script>
 <script src="https://static.vhallyun.com/jssdk/vhall-jssdk-base-1.0.0.js?v=201806271657"></script>
 
@@ -941,12 +943,12 @@ if(browser.versions.mobile || browser.versions.ios || browser.versions.android |
 
 <script type="text/javascript">
     var $ = jQuery;
-    $(document).ready(function(){
+/*     $(document).ready(function(){
           var iv2 = $("#viewer2").iviewer(
           {
               src: "https://file.xczhihui.com/18802142750/1a666a314bdc05a6.png"
           });
-    });
+    }); */
     
     $(function() {
 		$('input').placeholder();
