--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -51,10 +51,33 @@
             display: none;
         }
     </style>
+
+    <script>
+       /* function startTime(){
+            var today=new Date()
+            var h=today.getHours()
+            var m=today.getMinutes()
+            var s=today.getSeconds()
+            // add a zero in front of numbers<10
+            m=checkTime(m)
+            s=checkTime(s)
+            document.getElementById('txt').innerHTML=h+":"+m+":"+s
+            t=setTimeout('startTime()',500)
+        }
+
+        function checkTime(i){
+        if (i<10) 
+          {i="0" + i}
+          return i
+        }*/
+    </script>
 </head>
 <body>
+    
 <script id="inherited_introduction_temp" type="text/html">
     <!-- 简介头部开始 -->
+    <!--<div id="timer" style="color:red"></div>-->
+    <!--<div id="txt"></div>-->
     <header>
         <div class="intro">
             <div class="opacity"></div>
