--- a/wechat/src/main/webapp/xcview/html/details.html
+++ b/wechat/src/main/webapp/xcview/html/details.html
@@ -142,7 +142,7 @@ $(function(){
 
         // 点击发送
         $(".send_img").click(function(){
-            alert(123);
+            // alert(123);
             $(".coze_bottom").css("bottom", "0rem");
         });
         
