[fix]优化主播工作台发起直播提示

--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2887,6 +2887,7 @@
 <script type="text/javascript" src="/web/js/MD5/browser-md5-file.js"></script>
 
 <script src="/web/js/anchor/tree-menu.js" type="text/javascript" charset="UTF-8"></script>
+<script src="/web/js/common_msg.js"></script>
 
 <script type="text/javascript">
     function numberCk(data) {
