--- a/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
+++ b/online-web/src/main/webapp/web/html/liveVideo4Vhallyun.html
@@ -1167,10 +1167,20 @@ function insertAtCaret(e){
 		/*function isWeixin(){
 		    var ua = navigator.userAgent.toLowerCase();
 		    if(ua.match(/MicroMessenger/i)=='micromessenger'){
-			$(".bdsharebuttonbox a").css("margin-top","0");
-			alert(1111);
+				$(".bdsharebuttonbox a").css("margin-top","0");
+				alert(1111);
 		    }
 		}*/
+		
+		function isWeixin(){
+		    var ua = navigator.userAgent.toLowerCase();
+		    if(ua.match(/MicroMessenger/i)=='micromessenger'){
+		        return true;
+		    }else{
+		        return false;
+		    }
+		}
+		
 	 	
 	});
 </script>
