--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -101,7 +101,7 @@
 
 		<script type="text/html" id="data_video">
 			<!--<img src="{{smallImgPath}}"/>-->
-			{{if lineState == 1 && record==ture}}
+			{{if lineState == 1}}
 			<!--视频开播-->
 			<a class="memory_lujin" data-memory="{{id}}"  href="javascript:;"></a>
 			<div class="video_prompt_open">
@@ -118,12 +118,9 @@
 			</div>
 			{{else if lineState == 3 && record==false}}
 				<div class="play_video_hide">当前直播无回放</div>
-			{{else if lineState == 3}}
+			{{else if lineState == 3 || record==ture}}
 			<!--<a href="javascript:;" class="btn_returned"></a>-->	
-			<a class="memory_lujin" data-memory="{{id}}" href="javascript:;"></a>
-			<div class="video_prompt_open">
-				<img src="../images/play_btn.png"/>
-			</div>
+			
 			{{/if}}
 		</script>
 	</div>
