--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -191,7 +191,7 @@
 		<!-- 弹幕开关 -->
 		<div class="barrage_switch"></div>
 		<div class="chat_all"></div>
-		<div class="transmit">发送</div>
+		<div class="transmit" onclick="sendContent()">发送</div>
 	</div>
 	<!-- 底部结束 -->
 	<div class="show"></div>
