--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -86,7 +86,7 @@
 	<!--时间插件引入-->
 	<script src="/web/js/anchor/jquery.jedate.min.js" type="text/javascript" charset="UTF-8"></script>
 	
-	<script src="/web/js/common_msg.js"></script>
+	<!--<script src="/web/js/common_msg.js"></script>-->
 	
 	<style type="text/css">
 		.fla_btn {
