pc--直播间-微信网页版，分享图片兼容处理。h5弟子判断测试，直播间-聊天记录修改、发现--图片误删后的还原

--- a/wechat/src/main/webapp/xcview/html/live_play.html
+++ b/wechat/src/main/webapp/xcview/html/live_play.html
@@ -119,7 +119,7 @@
 			{{else if lineState == 3 && record==false}}
 				<div class="play_video_hide">当前直播无回放</div>
 			{{else if lineState == 3 || record==ture}}
-			<!--<a href="javascript:;" class="btn_returned"></a>-->	
+				<a href="javascript:;" class="btn_returned"></a>
 			
 			{{/if}}
 		</script>
