--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -470,7 +470,7 @@
 		<!-- 主播信息开始 -->
 		<div class="referral">
 			<div class="head_portrait">
-				<img src="{{items.lecturerInfo.small_head_photo}}" alt="" onerror="nofind();" />
+				<img src="{{items.lecturerInfo.small_head_photo}}?imageMogr2/thumbnail/!140x140r|imageMogr2/gravity/Center/crop/140x140" alt="" onerror="nofind();" />
 			</div>
 			<div class="message">
 				<div class="message_name">
