中医师动态--只有一张动态图

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -419,6 +419,14 @@
 	.wrap_vedio{
 		max-height: 9.1rem;
 	}
+
+	.itransforms_li{
+		max-width: 4.26rem;
+    	max-height: 10.26rem;
+	}
+	.itransforms_li img{
+		transform: scale(1.2,1.3);
+	}
 </style>
 
 </head>
@@ -569,6 +577,9 @@
 									<div class="am-gallery-item" data-itransform="{{item.id}}">
 										<a href="{{pic.imgUrl}}?imageView2/2/h/226" class="transform_a_img">
 											<!--<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!226x226r|imageMogr2/gravity/Center/crop/226x226" />-->
+
+											<!--<img src="{{pic.imgUrl}}?imageMogr2/thumbnail/!300x300r|imageMogr2/gravity/Center/crop/426x426" class="pic_img pic_img_one" />-->
+
 
 												<img src="{{pic.imgUrl}}" class="pic_img pic_img_one" />
 											
